# Bidirectional-FM-index

./: BWT.cpp  BWT.h  BiBWT.cpp  BiBWT.h  CMakeLists.txt  README.md  bandmatrix.h  bitvec.h  buildIndex.cpp  customtypedefs.cpp  customtypedefs.h  main.cpp  searchstrategy.h
